# Trabalho-Individual-2022-2-

./: Dockerfile  build_docs.sh  docker-compose.yaml  doxygen.conf  pyproject.toml  requirements.txt
