[tool.poetry]
name = "GCES-Trabalho-Individual-2022-2"
version = "0.1.0"
description = "GCES-Trabalho-Individual-2022-2"
authors = ["Ricardo Loureiro <ricardoloureiro75@gmail.com>"]

[tool.poetry.dependencies]
doxygen = "*"
sphinx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
